# lvgl_playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h
diagram/: MVP_Temperature_update.puml  MVP_architecture.puml  MVVM_KDBindings_architecture.puml  MVVM_LVGL_Observer_architecture.puml  temperature_update_flow.puml  temperature_update_flow_observer.puml
src/: main.cpp
src/app/: AppConstants.h  AppHeader.cpp  AppHeader.h  AppHeaderPresenter.h  AppHeaderViewModel.h  HeaderState.h  IAppHeaderView.h  ViewFactory.cpp  ViewFactory.h  ViewManager.cpp  ViewManager.h
src/models/: TemperatureModel.h
src/presenters/: ClimatePresenter.cpp  ClimatePresenter.h  HomePresenter.cpp  HomePresenter.h
src/views/: IView.h  IViewModel.h  ViewId.h
src/views/button_overview/: ButtonOverviewView.cpp  ButtonOverviewView.h  ButtonOverviewViewModel.h
src/views/climate/: ClimateView.cpp  ClimateView.h  ClimateViewModel.h  IClimateView.h
src/views/home/: HomeView.cpp  HomeView.h  HomeViewModel.h  IHomeView.h
src/views/main/: MainView.cpp  MainView.h  MainViewModel.h
